commit number five

--- a/data_cleaning_example.ipynb
+++ b/data_cleaning_example.ipynb
@@ -2485,6 +2485,26 @@
     "\n",
     "$$z_i = w_0 + \\sum_{j=0}^m w_j x_{ij}$$\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "e7461520",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "from outliers_lib.find_outliers import my_function\n",
+    "\n",
+    "print(my_function(5,6))"
+   ]
   }
  ],
  "metadata": {
